--- a/sample.html
+++ b/sample.html
@@ -4,6 +4,8 @@
     </head>
 
     <body style="background-color: bisque;">
+        <canvas id="wrap_column"></canvas>
+        <br /><br />
         <canvas id="wrap_bar"></canvas>
     </body>
 
